improve mapping in model, out embeddings to list

--- a/Recommendation.ipynb
+++ b/Recommendation.ipynb
@@ -90,8 +90,7 @@
     "        y_true_val += [0]*len(non_edges_val[0])\n",
     "        data.edge_index = train_edge_index\n",
     "        \n",
-    "        return data,non_edges_val,val_edge_index,y_true_val #data уже обрезанная по ребрам\n",
-    "    \n"
+    "        return data,non_edges_val,val_edge_index,y_true_val #data уже обрезанная по ребрам"
    ]
   },
   {
@@ -165,7 +164,7 @@
     "data_init, mapping_new_to_old,mapping_old_to_new=data_load() #data_init - это самый изначальный граф, маппинги вершин\n",
     "data,non_edges_val,val_edge_index,y_true_val = dataprocess(data_init) #data - здесь уже без части ребер, для валидации надо\n",
     "data = di_to_undirected(data)#добавление ребер в обратную сторону\n",
-    "data_init = di_to_undirected(data_init)#добавление ребер в обратную сторону\n"
+    "data_init = di_to_undirected(data_init)#добавление ребер в обратную сторону"
    ]
   },
   {
@@ -225,7 +224,7 @@
     "        for vid in list(zip(*neighbors))[0]:\n",
     "            if vid not in self.mapping_old_to_new:  \n",
     "                self.mapping_old_to_new[vid] = len(self.mapping_old_to_new)\n",
-    "                self.mapping_new_to_old[self.mapping_old_to_new[vid]] = vid\n",
+    "                self.mapping_new_to_old[len(self.mapping_new_to_old)] = vid\n",
     "                self.data.x = torch.cat((data.x,torch.tensor(vertex[1]).reshape(1,-1)))\n",
     "                new_embs+=1\n",
     "        \n",
@@ -291,7 +290,7 @@
     "        out=[]\n",
     "        for i in range(new_embs,0,-1):\n",
     "            new_index = len(self.mapping_old_to_new)-i\n",
-    "            out.append((self.mapping_new_to_old[new_index],x[remap_new_to_new2[new_index]]))\n",
+    "            out.append((self.mapping_new_to_old[new_index],x[remap_new_to_new2[new_index]].tolist()))\n",
     "        return out \n",
     "    \n",
     "    def loss(self,out, PosNegSamples):\n",
@@ -462,7 +461,6 @@
    "outputs": [],
    "source": [
     "#test\n",
-    "\n",
     "x=model.inference(vertex,neighbors,neighbors_of_neighbors)"
    ]
   },
@@ -481,33 +479,6 @@
    "source": [
     "G = igraph.Graph.TupleList(rels, weights=False, directed=True)\n",
     "igraph.summary(G)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(model.mapping_old_to_new)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "samples"
    ]
   },
   {
