add save and load MODEL

--- a/Recommendation.ipynb
+++ b/Recommendation.ipynb
@@ -45,7 +45,9 @@
     "import json\n",
     "from uuid import UUID\n",
     "from base64 import b64decode as b64d\n",
-    "import networkx as nx"
+    "import networkx as nx\n",
+    "from Model import Scalable\n",
+    "import pickle "
    ]
   },
   {
@@ -99,6 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "def data_load(): #загрузить и обработать данные\n",
     "    with open('assets (9)','r', encoding=\"utf-8\") as f:\n",
     "        assets = json.load(f)\n",
@@ -184,141 +187,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Scalable(ScalableGNN):\n",
-    "    def __init__(self, data, num_nodes, in_channels, hidden_channels,\n",
-    "                 out_channels, num_layers,mapping_new_to_old,mapping_old_to_new):\n",
-    "        # * pool_size determines the number of pinned CPU buffers\n",
-    "        # * buffer_size determines the size of pinned CPU buffers,\n",
-    "        #   i.e. the maximum number of out-of-mini-batch nodes\n",
-    "\n",
-    "        super().__init__(num_nodes, hidden_channels, num_layers,\n",
-    "                         pool_size=2, buffer_size=5000)\n",
-    "        self.out_channels=out_channels\n",
-    "        self.convs = ModuleList()\n",
-    "        self.convs.append(SAGEConv(in_channels, hidden_channels))\n",
-    "        for _ in range(num_layers - 2):\n",
-    "            self.convs.append(SAGEConv(hidden_channels, hidden_channels))\n",
-    "        self.convs.append(SAGEConv(hidden_channels, out_channels))\n",
-    "        self.mapping_new_to_old = mapping_new_to_old\n",
-    "        self.data = data\n",
-    "        self.mapping_old_to_new=mapping_old_to_new\n",
-    "    def forward(self, x, adj_t, *args):\n",
-    "        for i, (conv, history) in enumerate(zip(self.convs, self.histories)):\n",
-    "            if i == len(self.convs)-1:\n",
-    "                x = conv(x, adj_t)\n",
-    "            else:\n",
-    "                x = conv(x, adj_t).relu_()\n",
-    "            x = self.push_and_pull(history, x, *args)\n",
-    "            \n",
-    "        return x # self.convs[-1](x, adj_t)\n",
-    "    def inference(self,vertex,neighbors,neighbors_of_neighbors,*args):\n",
-    "         #предполагаю что среди neighbors_of_neighbors- нет новых\n",
-    "            #нет проверки на то, пришли ко мне одинаковые вершины или разные\n",
-    "        model.eval()\n",
-    "        #обработка новых вершин\n",
-    "        new_embs=1\n",
-    "        if vertex[0] not in self.mapping_old_to_new:  \n",
-    "                self.mapping_old_to_new[vertex[0]] = len(self.mapping_old_to_new)\n",
-    "                self.mapping_new_to_old[self.mapping_old_to_new[vertex[0]]] = vertex[0]\n",
-    "                self.data.x = torch.cat((data.x,torch.tensor(vertex[1]).reshape(1,-1)))\n",
-    "        for vid in list(zip(*neighbors))[0]:\n",
-    "            if vid not in self.mapping_old_to_new:  \n",
-    "                self.mapping_old_to_new[vid] = len(self.mapping_old_to_new)\n",
-    "                self.mapping_new_to_old[len(self.mapping_new_to_old)] = vid\n",
-    "                self.data.x = torch.cat((data.x,torch.tensor(vertex[1]).reshape(1,-1)))\n",
-    "                new_embs+=1\n",
-    "        \n",
-    "        new_edges = []\n",
-    "        new_ver = self.mapping_old_to_new[vertex[0]]\n",
-    "        for neighbor in neighbors:\n",
-    "            new_edges.append([new_ver,self.mapping_old_to_new[neighbor[0]]])\n",
-    "            new_edges.append([self.mapping_old_to_new[neighbor[0]],new_ver])\n",
-    "        self.data.edge_index =  torch.cat([data.edge_index,torch.tensor(new_edges).t()],-1)\n",
-    "        \n",
-    "        #обновляем сам граф\n",
-    "        x = self.data.x\n",
-    "        self.data.adj_t = SparseTensor.from_edge_index(data.edge_index)#SparseTensor(row=self.data.edge_index[0],col=self.data.edge_index[1],sparse_sizes=(len(self.data.x),len(self.data.x)))\n",
-    "        #adj_t = self.data.adj_t\n",
-    "        \n",
-    "        #делаем батч только нужных нам вершин и соседей\n",
-    "        c1=list(zip(*neighbors))[0]\n",
-    "        c2=list(zip(*neighbors))[1]\n",
-    "        c1+=(list(zip(*neighbors_of_neighbors))[0])\n",
-    "        c2+=(list(zip(*neighbors_of_neighbors))[1])\n",
-    "        all_neighbors=list(zip(c1,c2)) #(old index, input embedding)\n",
-    "        \n",
-    "        remap_new_to_new2 = {}\n",
-    "        remap_new2_to_new = {}\n",
-    "        remap_new_to_new2[0] = self.mapping_old_to_new[vertex[0]]\n",
-    "        remap_new_to_new2[self.mapping_old_to_new[vertex[0]]] = 0\n",
-    "        for new_index, neigbor in enumerate(c1):\n",
-    "            remap_new_to_new2[self.mapping_old_to_new[neigbor]] = new_index+1\n",
-    "            remap_new2_to_new[new_index+1] = self.mapping_old_to_new[neigbor]\n",
-    "        \n",
-    "        #находим ребра\n",
-    "        \n",
-    "        first = ((self.data.edge_index[0]==self.mapping_old_to_new[vertex[0]]).nonzero(as_tuple=True)[0]).tolist()\n",
-    "        second =  ((self.data.edge_index[1]==self.mapping_old_to_new[vertex[0]]).nonzero(as_tuple=True)[0]).tolist()\n",
-    "        \n",
-    "        for neighbor in c1: \n",
-    "            first+=(((self.data.edge_index[0]==self.mapping_old_to_new[neighbor]).nonzero(as_tuple=True)[0]).tolist())\n",
-    "            second+=(((self.data.edge_index[1]==self.mapping_old_to_new[neighbor]).nonzero(as_tuple=True)[0]).tolist())\n",
-    "        \n",
-    "        \n",
-    "        edge_index_indices = list(set(first).intersection(set(second)))\n",
-    "        edge_index_1 = self.data.edge_index[0][torch.tensor(edge_index_indices)]\n",
-    "        edge_index_1=list(map( lambda x: remap_new_to_new2[x], edge_index_1.tolist()))\n",
-    "        edge_index_2 = self.data.edge_index[1][torch.tensor(edge_index_indices)]\n",
-    "        edge_index_2=list(map( lambda x: remap_new_to_new2[x], edge_index_2.tolist()))\n",
-    "        batch_edge_index = torch.stack((torch.tensor(edge_index_1),torch.tensor(edge_index_2))) \n",
-    "        \n",
-    "        #делаем из него adj_t#перепроверить возможно не правильно так делать \n",
-    "        adj_t=SparseTensor.from_edge_index(batch_edge_index)\n",
-    "        #собираем х!!!! \n",
-    "        x=[vertex[1]]\n",
-    "        x+=c2\n",
-    "        \n",
-    "        x=torch.tensor(x)\n",
-    "        \n",
-    "        #сам inference\n",
-    "        for i, conv in enumerate(self.convs):\n",
-    "            if i == len(self.convs)-1:\n",
-    "                x = conv(x, adj_t)\n",
-    "            else:\n",
-    "                x = conv(x, adj_t).relu_()\n",
-    "        \n",
-    "        out=[]\n",
-    "        for i in range(new_embs,0,-1):\n",
-    "            new_index = len(self.mapping_old_to_new)-i\n",
-    "            out.append((self.mapping_new_to_old[new_index],x[remap_new_to_new2[new_index]].tolist()))\n",
-    "        return out \n",
-    "    \n",
-    "    def loss(self,out, PosNegSamples):\n",
-    "        (pos_rw,neg_rw) = PosNegSamples\n",
-    "            # Negative loss\n",
-    "        start, rest = neg_rw[:, 0].type(torch.LongTensor), neg_rw[:, 1:].type(torch.LongTensor).contiguous()\n",
-    "        h_start =out[start].view(neg_rw.size(0), 1,self.out_channels)\n",
-    "        \n",
-    "        h_rest =  out[rest.view(-1)].view(neg_rw.size(0), -1,self.out_channels)\n",
-    "        dot = (h_start * h_rest).sum(dim=-1).view(-1)\n",
-    "        neg_loss = -torch.log(torch.sigmoid((-1)*dot)).mean()\n",
-    "            # Positive loss.\n",
-    "        start, rest = pos_rw[:, 0].type(torch.LongTensor), pos_rw[:, 1].type(torch.LongTensor).contiguous()\n",
-    "        h_start = out[start].view(pos_rw.size(0), 1,self.out_channels)\n",
-    "\n",
-    "        h_rest = out[rest.view(-1)].view(pos_rw.size(0), -1,self.out_channels)\n",
-    "        dot = ((h_start * h_rest).sum(dim=-1)).view(-1)\n",
-    "        pos_loss = -(torch.log(torch.sigmoid(dot))).mean() \n",
-    "        return pos_loss + neg_loss\n",
-    "        \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def neg_samples(edge_index,ind,num_negative_samples): #возвращает негативные примеры\n",
     "    d=datetime.now()\n",
     "    neg_samples=torch.Tensor(size=(len(ind),num_negative_samples+1))\n",
@@ -389,24 +257,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(data_init.x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(mapping_old_to_new)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -420,7 +270,7 @@
     "losses=[]\n",
     "scores=[]\n",
     "\n",
-    "for epoch in range(10):\n",
+    "for epoch in range(100):\n",
     "        d=datetime.now()\n",
     "        loss=train(model,loader,num_negative_smples)\n",
     "        losses.append(float(loss))\n",
@@ -433,6 +283,52 @@
     "plt.plot(torch.tensor(scores).tolist())\n",
     "plt.show()\n",
     "print(datetime.now()-d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Saving model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save(model.state_dict(),'model_parameters')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('mapping_old_to_new','wb') as f:\n",
+    "    mapping_old_to_new=pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('mapping_new_to_old','wb') as f:\n",
+    "    mapping_new_to_old=pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('Data','wb') as f:\n",
+    "    pickle.dump(data_init,f)"
    ]
   },
   {
@@ -461,7 +357,7 @@
    "outputs": [],
    "source": [
     "#test\n",
-    "x=model.inference(vertex,neighbors,neighbors_of_neighbors)"
+    "x=model2.inference(vertex,neighbors,neighbors_of_neighbors)"
    ]
   },
   {
