--- a/LoadModel.ipynb
+++ b/LoadModel.ipynb
@@ -8,92 +8,12 @@
    "source": [
     "import torch\n",
     "from Model import Scalable\n",
-    "import pickle "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('Data','rb') as f:\n",
-    "    data=pickle.load(f)\n",
-    "with open('mapping_old_to_new','rb') as f:\n",
-    "    mapping_old_to_new=pickle.load(f)\n",
-    "with open('mapping_new_to_old','rb') as f:\n",
-    "    mapping_new_to_old=pickle.load(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<All keys matched successfully>"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model = Scalable(data, num_nodes=len(data.x), in_channels=len(data.x[0]), hidden_channels=128,out_channels=128, num_layers=2, mapping_new_to_old=mapping_new_to_old,mapping_old_to_new=mapping_old_to_new)\n",
-    "model.load_state_dict(torch.load('model_parameters'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#EXAMPLE\n",
-    "with open('new_vertex','rb') as f:\n",
-    "    [vertex,neighbors,neighbors_of_neighbors] = pickle.load(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x=model.inference(vertex,neighbors,neighbors_of_neighbors)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('Data','wb') as f:\n",
-    "    pickle.dump(data,f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('mapping_old_to_new','wb') as f:\n",
-    "    pickle.dump(mapping_old_to_new,f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('mapping_old_to_new','wb') as f:\n",
-    "    pickle.dump(mapping_old_to_new,f)"
+    "import pickle \n",
+    "\n",
+    "model = Scalable(num_nodes=len(new_vertices)+len(old_vertices), in_channels=len(new_vertices[0][1]), hidden_channels=128,out_channels=128, num_layers=2)\n",
+    "model.load_state_dict(torch.load('model_parameters'))\n",
+    "\n",
+    "model.inference(new_vertices,old_vertices,rels)\n"
    ]
   }
  ],
