last version of only training

--- a/train/Recommendation.ipynb
+++ b/train/Recommendation.ipynb
@@ -47,7 +47,8 @@
     "from base64 import b64decode as b64d\n",
     "import networkx as nx\n",
     "from Model import Scalable\n",
-    "import pickle "
+    "import pickle \n",
+    "import pandas as pd"
    ]
   },
   {
@@ -101,28 +102,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def data_load(): #загрузить и обработать данные\n",
-    "    with open('assets (9)','r', encoding=\"utf-8\") as f:\n",
-    "        assets = json.load(f)\n",
+    "   # with open('assets (16)','r', encoding=\"utf-8\") as f:\n",
+    "    #    assets = json.load(f)\n",
     "\n",
-    "    with open('asset_embeddings (1)','r') as f:\n",
-    "        embeddings = json.load(f)\n",
+    "    with open('embeddings.json','r') as f:\n",
+    "        emb_map = json.load(f)\n",
     "\n",
     "    to_uuid = lambda x: str(UUID(b64d(x, altchars=None, validate=False).hex()))\n",
     "    \n",
-    "    rels = []\n",
-    "    \n",
-    "    for asset in assets:\n",
-    "        if asset['cited_articles']:\n",
-    "            source = to_uuid(asset['asset_id']['$binary'])\n",
-    "            for tt in  asset['cited_articles']:\n",
-    "                target = to_uuid(tt['$binary'])\n",
-    "                rels.append(tuple([source,target]))\n",
-    "    emb_map = {}\n",
-    "   \n",
-    "    for emb in embeddings:\n",
-    "        emb_map[to_uuid(emb['asset_id']['$binary'])] = emb['embedding']\n",
+    "    #rels = []\n",
+    "    rels = pd.read_csv('relations.csv')\n",
+    "    rels=list(zip(list(rels['from']),list(rels['to'])))\n",
+    "    #for asset in assets:\n",
+    "     #   if asset['cited_articles']:\n",
+    "      #      source = to_uuid(asset['asset_id']['$binary'])\n",
+    "       #     for tt in  asset['cited_articles']:\n",
+    "        #        target = to_uuid(tt['$binary'])\n",
+    "         #       rels.append(tuple([source,target]))\n",
     "\n",
     "    rels = [x for x in rels if x[0] in emb_map and x[1] in emb_map]\n",
     "    mapping_old_to_new={}\n",
@@ -164,10 +161,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "data_init, mapping_new_to_old,mapping_old_to_new=data_load() #data_init - это самый изначальный граф, маппинги вершин\n",
-    "data,non_edges_val,val_edge_index,y_true_val = dataprocess(data_init) #data - здесь уже без части ребер, для валидации надо\n",
-    "data = di_to_undirected(data)#добавление ребер в обратную сторону\n",
-    "data_init = di_to_undirected(data_init)#добавление ребер в обратную сторону"
+    "\n",
+    "#data,non_edges_val,val_edge_index,y_true_val = dataprocess(data_init) #data - здесь уже без части ребер, для валидации надо\n",
+    "#data = di_to_undirected(data)#добавление ребер в обратную сторону\n",
+    "data=data_init\n",
+    "data_init = di_to_undirected(data_init)#добавление ребер в обратную сторону\n",
+    "data=di_to_undirected(data)"
    ]
   },
   {
@@ -178,7 +179,7 @@
    "source": [
     "perm, ptr = metis(data.adj_t, num_parts=40, log=True)\n",
     "data_train = permute(data, perm, log=True)\n",
-    "loader = SubgraphLoader(data_train, ptr, batch_size=10, shuffle=True)"
+    "loader = SubgraphLoader(data_train, ptr, batch_size=1, shuffle=True)"
    ]
   },
   {
@@ -263,25 +264,25 @@
    "outputs": [],
    "source": [
     "d = datetime.now()\n",
-    "model = Scalable(data_init, num_nodes=len(data.x), in_channels=len(data.x[0]), hidden_channels=128,out_channels=128, num_layers=2, mapping_new_to_old=mapping_new_to_old,mapping_old_to_new=mapping_old_to_new)\n",
+    "model = Scalable(num_nodes=len(data_init.x), in_channels=len(data_init.x[0]), hidden_channels=128,out_channels=128, num_layers=2)\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=0.0001,weight_decay = 1e-5)\n",
+    "schedular  = torch.optim.lr_scheduler.StepLR(optimizer, step_size=100, gamma=0.1)\n",
     "num_negative_smples=4\n",
-    "scheduler=torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, mode='min', factor=0.5, patience=10, threshold=0.01, threshold_mode='rel', cooldown=0, min_lr=0, eps=1e-08, verbose=False)\n",
     "losses=[]\n",
     "scores=[]\n",
-    "\n",
-    "for epoch in range(100):\n",
+    "for epoch in range(353):\n",
     "        d=datetime.now()\n",
     "        loss=train(model,loader,num_negative_smples)\n",
     "        losses.append(float(loss))\n",
-    "        scheduler.step(loss)\n",
-    "        score=test(y_true_val,model,data,val_edge_index)\n",
-    "        scores.append(score)\n",
-    "        print(epoch,loss,score)\n",
-    "plt.plot(torch.tensor(losses).tolist())\n",
+    "        print(epoch,loss)\n",
+    "        #scheduler.step(loss)\n",
+    "        #score=test(y_true_val,model,data,val_edge_index)\n",
+    "        #scores.append(score)\n",
+    "        print('one epoch',datetime.now()-d)\n",
+    "plt.plot(losses)\n",
     "plt.show()\n",
-    "plt.plot(torch.tensor(scores).tolist())\n",
-    "plt.show()\n",
+    "#plt.plot(torch.tensor(scores).tolist())\n",
+    "#plt.show()\n",
     "print(datetime.now()-d)"
    ]
   },
@@ -299,36 +300,6 @@
    "outputs": [],
    "source": [
     "torch.save(model.state_dict(),'model_parameters')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('mapping_old_to_new','wb') as f:\n",
-    "    mapping_old_to_new=pickle.load(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('mapping_new_to_old','wb') as f:\n",
-    "    mapping_new_to_old=pickle.load(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('Data','wb') as f:\n",
-    "    pickle.dump(data_init,f)"
    ]
   },
   {
