256 embeddings; remove num of nodes in init

--- a/LoadModel.ipynb
+++ b/LoadModel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,10 +10,9 @@
     "from Model import Scalable\n",
     "import pickle \n",
     "\n",
-    "model = Scalable(num_nodes=len(new_vertices)+len(old_vertices), in_channels=len(new_vertices[0][1]), hidden_channels=128,out_channels=128, num_layers=2)\n",
+    "model = Scalable(in_channels=len(new_vertices[0][1]), hidden_channels=512,out_channels=256, num_layers=2)\n",
     "model.load_state_dict(torch.load('model_parameters'))\n",
-    "\n",
-    "model.inference(new_vertices,old_vertices,rels)\n"
+    "model.inference(new_vertices,old_vertices,rels)"
    ]
   }
  ],
